# tagmaster

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tagger.py  tagger.spec
build-scripts/: build.py
